# Gmpv

./: README.md  gmpv  meson.build  pyproject.toml
data/: com.github.bearenbey.Gmpv.desktop  com.github.bearenbey.Gmpv.metainfo.xml  meson.build
src/: meson.build
src/gmpv/: controls.py  main.py  meson.build  player.py  window.py
